fix version fix video

--- a/JeerowayWiki.Client/wwwroot/index.html
+++ b/JeerowayWiki.Client/wwwroot/index.html
@@ -12,6 +12,7 @@
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="shortcut icon" href="icon-512.png" type="image/x-icon">
+    <script src="version.js"></script>
 </head>
 
 <body>
@@ -28,7 +29,7 @@
             console.warn('Service Workers are not enabled.');
         }
         else {
-            navigator.serviceWorker.register('service-worker.js');
+            navigator.serviceWorker.register('/***.js', { scope: '/' });//.register('service-worker.js');
         }
     </script>
 </body>
